# capnp_conv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
capnp_conv/: Cargo.toml
capnp_conv/src/: lib.rs
capnp_conv_macros/: Cargo.toml
capnp_conv_macros/src/: generators.rs  lib.rs  models.rs  parsers.rs  utils.rs
capnp_conv_tests/: Cargo.toml  build.rs
capnp_conv_tests/tests/: .gitignore  test.capnp  test.rs
capnp_conv_tests/tests/anypointer/: anypointer.capnp  anypointer_rust.rs  mod.rs
capnp_conv_tests/tests/common/: common.capnp  common_rust.rs  mod.rs  test_rust.rs
capnp_conv_tests/tests/optional/: mod.rs  optional.capnp  optional_rust.rs  test_rust.rs
capnp_conv_tests/tests/union_variant/: mod.rs  union_variant.capnp  union_variant_rust.rs
capnp_conv_tests/tests/vecs/: mod.rs  vecs.capnp  vecs_rust.rs
example/: Cargo.toml  build.rs  example.capnp
example/src/: main.rs  rust_types.rs
