[workspace]
resolver = "2"
members = ["capnp_conv", "capnp_conv_macros", "capnp_conv_tests", "example"]

[workspace.package]
authors = ["Aik Kalantarian <aik.kalantarian@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aikalant/capnp_conv"


[workspace.dependencies]
capnp = "0.14"
capnpc = "0.14"
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
