[package]
name = "capnp_conv_macros"
description = "Provides attribute macros that implement capnp read/write traits"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }
