[package]
name = "capnp_conv_tests"
description = "Testing crate for capnp_conv"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
capnp.workspace = true
capnp_conv = { path = "../capnp_conv" }

[build-dependencies]
capnpc.workspace = true
