[package]
name = "example"
description = "An example of how to use the capnp_conv macro"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
capnp = "0.14.7"
capnp_conv = { path = "../capnp_conv" }

[build-dependencies]
capnpc = "0.14.7"
