[package]
name = "example"
description = "An example of how to use the capnp_conv macro"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
capnp_conv.workspace = true
capnp.workspace = true

[build-dependencies]
capnpc.workspace = true
